Refactorización de Player y Match. TODO: arreglar errores de ejecución